service-mesh/istio-1.0-vm/dsav/istio/dsav-egress-gateway.yaml
# ingress gateway is use for like gateway in one domain
# for example below is use for saving domain that accept the port 80 and protocol http
# to receive call from the client
# the name must start with http and the protocol also one of listed in list below
# HTTP
# HTTP2
# TCP
# MONGO

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dsav-egress-gateway
spec:
  selector:
    istio: egressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # - port:
  #     number: 3307
  #     name: tnindo-postgres
  #     protocol: TCP
  #   hosts:
  #   - "*"    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dsav-egress-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - dsav-egress-gateway
  http:
  - match:
    - uri:
        prefix: /dsav_account
    route:
    - destination:
        host: dsav-account
        port:
          number: 6082
  - match:
    - uri:
        prefix: /dsav_txn
    route:
    - destination:
        host: dsav-txn
        port:
          number: 8080
  - match:
    - uri:
        prefix: /dsav_report
    route:
    - destination:
        host: dsav-report
        port:
          number: 6086
  - match:
    - uri:
        prefix: /dsav_interest
    route:
    - destination:
        host: dsav-interest
        port:
          number: 6085
  # tcp:
  # - route:
  #   - destination:
  #       host: dsav-mongo
  #       port:
  #         number: 31111
