service-mesh/istio-1.0-vm/dsav/istio/dsav-egress.yaml
# this configuration is use egress rule from account service connect to external service
# for example in this part is account service will be connect to 
# - sav-txn
# - saving-mongo
# - saving-redis

# every serviceEntry is describe with ports property ,it's mean that port will be open in service account
# so service account connect to external service at port 32104, 3004  for connection saving-txn.default-svc.cluster.local (represent host name)
# and the supported protocol is HTTP, HTTP2, TCP, MONGO 
# http2 is represent the grpc connection

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-txn-egress
spec:
  hosts:
    - dsav-txn
  ports:
    - number: 8080
      name: http-txn
      protocol: HTTP
    - number: 8081
      name: dsav-txn-grpc
      protocol: HTTP2
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-mongo-egress
spec:
  hosts:
    - dsav-mongo
  ports:
    - number: 27017
      name: dsav-mongo
      protocol: MONGO
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-redis-egress
spec:
  hosts:
    - dsav-redis
  ports:
    - number: 6379
      name: dsav-redis
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-interest-egress
spec:
  hosts:
    - dsav-interest
  ports:
    - number: 6085
      name: http-interest
      protocol: HTTP
    - number: 56085
      name: grpc-interest
      protocol: HTTP2
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-report-egress
spec:
  hosts:
    - dsav-report
  ports:
    - number: 6086
      name: http-report
      protocol: HTTP
    - number: 56086
      name: grpc-report
      protocol: HTTP2
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-account-egress
spec:
  hosts:
    - dsav-account
  ports:
    - number: 6082
      name: http-account
      protocol: HTTP
    - number: 56082
      name: grpc-account
      protocol: HTTP2
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: tnindo-postgres-egress
spec:
  hosts:
    - tnindo-postgres
  ports:
    - number: 5432
      name: tnindo-postgres
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: glmongodb-egress
spec:
  hosts:
    - glmongodb
  ports:
    - number: 5672
      name: glmongodb
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: savrabbitmq-egress
spec:
  hosts:
    - savrabbitmq
  ports:
    - number: 5672
      name: savmq
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-txnpg-egress
spec:
  hosts:
    - dsav-txnpg
  ports:
    - number: 5432
      name: dsav-txnpg
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dsav-txnmq-egress
spec:
  hosts:
    - dsav-txnmq
  ports:
    - number: 5672
      name: amqp
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
