service-mesh/istio-1.0-vm/dsav/istio/dsav-interest-virtual-service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dsav-interest-vs
spec:
  hosts:
  - dsav-interest
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dsav-interest
        port:
          number: 36085
    fault:
      abort:
        percent: 50
        httpStatus: 504
