service-mesh/istio-1.0-vm/dsav/istio/dsav-txn-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dsav-txn-vs
spec:
  hosts:
  - dsav-txn
  http:
  - match:
    - uri:
        prefix: /dsav_txn/
    route:
    - destination:
        host: dsav-txn
        port:
          number: 8080
  - match:
    - uri:
        prefix: /service.service
    route:
    - destination:
        host: dsav-txn
        port:
          number: 8081
    # timeout: 0.1s
    fault:
      abort:
        percent: 50
        httpStatus: 505
